--- a/service/grails-app/conf/application.yml
+++ b/service/grails-app/conf/application.yml
@@ -31,6 +31,10 @@ grails:
               pattern: '/**'
               access:
                 - 'permitAll'
+            -
+              pattern: '/swagger/api'
+              access:
+                - 'permitAll'
         filterChain:
           chainMap:
             - 
