--- a/service/build.gradle
+++ b/service/build.gradle
@@ -11,6 +11,7 @@ buildscript {
     classpath "org.grails.plugins:hibernate5:${gormHibernate-".RELEASE"}"
     classpath 'org.grails.plugins:database-migration:3.1.0'
     classpath 'com.bmuschko:gradle-docker-plugin:6.6.1'
+    classpath "io.swagger.core.v3:swagger-gradle-plugin:2.2.0"
   }
 }
 
@@ -38,6 +39,7 @@ apply plugin: 'org.grails.grails-web'
 apply plugin: 'org.grails.plugins.views-json'
 apply plugin: 'com.github.erdi.webdriver-binaries'
 apply plugin: 'com.bmuschko.docker-remote-api'
+apply plugin: 'io.swagger.core.v3.swagger-gradle-plugin'
 
 eclipse {
   classpath {
@@ -159,6 +161,9 @@ dependencies {
   testCompile( 'com.athaydes:spock-reports:1.6.1' ) {
     transitive = false // this avoids affecting your version of Groovy/Spock
   }
+
+  annotationProcessor("io.micronaut.openapi:micronaut-openapi:4.2.1")
+  implementation("io.swagger.core.v3:swagger-annotations")
 }
 
 bootRun {
